    to the Table event.   Table gets no kws, the MetaData
    event in 0.6 would get "tables=somecollection",
    this behavior is preserved.  [ticket:2206]

  - Fixed bug where "autoincrement" detection on 
    Table would fail if the type had no "affinity"
    value, in particular this would occur when using 
    the UUID example on the site that uses TypeEngine
    as the "impl".

- engine
  - Use urllib.parse_qsl() in Python 2.6 and above,
    no deprecation warning about cgi.parse_qsl()
    [ticket:1682]

  - Added mixin class sqlalchemy.ext.DontWrapMixin.
    User-defined exceptions of this type are never
    wrapped in StatementException when they 
    occur in the context of a statement 
    execution.

  - StatementException wrapping will display the
    original exception class in the message.  

  - Failures on connect which raise dbapi.Error
    will forward the error to dialect.is_disconnect()
    and set the "connection_invalidated" flag if 
    the dialect knows this to be a potentially
    "retryable" condition.  Only Oracle ORA-01033
    implemented for now.  [ticket:2201]

- mssql
  - Adjusted the pyodbc dialect such that bound
    values are passed as bytes and not unicode
    if the "Easysoft" unix drivers are detected. 
    This is the same behavior as occurs with
    FreeTDS.  Easysoft appears to segfault
    if Python unicodes are passed under
    certain circumstances.

- oracle
  - Added ORA-00028 to disconnect codes, use 
    cx_oracle _Error.code to get at the code,
    [ticket:2200].  Also in 0.6.9.

  - Added ORA-01033 to disconnect codes, which
    can be caught during a connection 
    event.  [ticket:2201]

-ext
  - Fixed bug in the mutable extension whereby
    if the same type were used twice in one
    mapping, the attributes beyond the first
    would not get instrumented.

  - Fixed bug in the mutable extension whereby
    if None or a non-corresponding type were set, 
    an error would be raised.  None is now accepted